added sorting into measurements

--- a/telegraf.conf
+++ b/telegraf.conf
@@ -17,11 +17,23 @@
   token = "gwTFtAnBRUM3OYmwsZ0GTg2C6r63bZ1G"
   organization = "bUZzverse"
   bucket = "lora_db"
+  
+[[processors.override]]
+	order = 1
+	name_override = "SENSOR_CHYNOW"
+	[processors.override.tagpass]
+		topic = ["tele/lora/SENSOR_CHYNOW"]
+		
+[[processors.override]]
+	order = 2
+	name_override = "SENSOR_SPANISH"
+	[processors.override.tagpass]
+		topic = ["tele/lora/SENSOR_SPANISH"]
 
 [[inputs.mqtt_consumer]]
   servers = ["tcp://mosquitto:1883"]
   topics = [
-    "tele/lora/SENSOR"
+    "tele/lora/+"
   ]
   data_format = "json"
   username = "admin"
@@ -32,7 +44,6 @@
   totalcpu = true
   collect_cpu_time = false
   report_active = false
-
 
 [[inputs.disk]]
   ignore_fs = ["tmpfs", "devtmpfs", "devfs", "iso9660", "overlay", "aufs", "squashfs"]
