timestamp field in MQTT message

--- a/telegraf.conf
+++ b/telegraf.conf
@@ -35,9 +35,29 @@
   topics = [
     "tele/lora/+"
   ]
-  data_format = "json"
+  data_format = "json_v2"
   username = "admin"
-  password = "qwerty"
+  password = "zaq1@WSX"
+  [[inputs.mqtt_consumer.json_v2]]
+    timestamp_path = "time"
+    timestamp_format = "unix_ms"
+    timestamp_timezone = "Europe/Warsaw"
+      [[inputs.mqtt_consumer.json_v2.field]]
+        path = "temperature"
+        type = "float"
+        optional = false
+      [[inputs.mqtt_consumer.json_v2.field]]
+        path = "humidity"
+        type = "float"
+        optional = false
+      [[inputs.mqtt_consumer.json_v2.field]]
+        path = "pressure"
+        type = "float"
+        optional = true
+      [[inputs.mqtt_consumer.json_v2.field]]
+        path = "battery_voltage_mv"
+        type = "float"
+        optional = true
 
 [[inputs.cpu]]
   percpu = true
